[tool.poetry]
name = "pyre-demo"
version = "0.1.0"
description = ""
authors = ["oleg.hoefling <oleg.hoefling@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
backoff = "^1.11.1"

[tool.poetry.dev-dependencies]
pyre-check = "^0.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
